# HerdLLM

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
dataset/: news_events.json
docs/: API_REFERENCE.md  STYLIZED_FACTS.md  UML_CLASS_DIAGRAM.md
report/: .latexmkrc  main.tex  references.bib
report/figures/: README.md  statistical_tests.tex
src/: __init__.py  agent.py  analysis.py  config.py  experiment.py  generate_figures.py  llm_client.py  market.py  memory.py  metrics.py  real_market_benchmark.py  run_experiment.py  social_network.py  stylized_facts.py  visualization.py
