[tool.poetry]
name = "synmarket-gen"
version = "0.1.0"
description = "Financial Market Sentiment Evolution Simulation based on LLM-Agents"
authors = ["SuZX"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14.1 || >3.14.1,<4.0"
openai = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"
networkx = "^3.6.1"
pyarrow = "^22.0.0"
scipy = "^1.11.0"
seaborn = "^0.13.0"
yfinance = "^0.2.66"
httpx = {extras = ["socks"], version = "^0.28.1"}
asyncio = "^4.0.0"

[tool.poetry.scripts]
run-sim = "src.main:main"
run-experiment = "src.run_experiment:main"
generate-figures = "src.generate_figures:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
